--- a/Comparing baseline with naïve Lesk's Algorithm.ipynb
+++ b/Comparing baseline with naïve Lesk's Algorithm.ipynb
@@ -22,8 +22,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports and Environment Setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +48,7 @@
      "text": [
       "[nltk_data] Downloading package wordnet to\n",
       "[nltk_data]     /home/2013/dgarfi/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/wordnet.zip.\n"
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     }
    ],
@@ -53,38 +60,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d001.s001.t002\tgroup\tU.N. group draft plan to reduce emission\t1\n"
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /home/2013/dgarfi/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dbg_id = 'd001.s001.t002'\n",
-    "dbg = dev_instances[dbg_id]\n",
-    "print(str(dbg))\n",
-    "list(filter(lambda x: not x.startswith(\"__\"), dir(dbg)))\n",
-    "sum([True, True, False])"
+    "nltk.download('stopwords')\n",
+    "lemmatizer = nltk.stem.WordNetLemmatizer()\n",
+    "stopwords = nltk.corpus.stopwords.words('english')\n",
+    "\n",
+    "def lemmatize_sentence(list_or_str):\n",
+    "    if isinstance(list_or_str, str):\n",
+    "        sentence_list = list_or_str.split()\n",
+    "    else:\n",
+    "        sentence_list = list_or_str\n",
+    "    return [lemmatizer.lemmatize(word) for word in sentence_list if word not in stopwords]\n",
+    "\n",
+    "def preprocess_wsdinstance(wsdinstance):\n",
+    "    wsdinstance.context = lemmatize_sentence(wsdinstance.context)\n",
+    "    return wsdinstance\n",
+    "    \n",
+    "dev_instances = { k: preprocess_wsdinstance(wsdinstance) for k, wsdinstance in dev_instances.items() }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculating Accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,60 +126,72 @@
     "    If any one of its possible Synsets is predicted, the word is considered correcty predicted.\n",
     "    \"\"\"\n",
     "    assert(len(predicted.values()) == len(expected.values()))\n",
-    "    return sum(map(lambda x: x[0] in x[1], zip(predicted.values(), expected.values()))) / float(len(predicted.values()))\n",
-    "\n"
+    "    return sum(map(lambda x: x[0] in x[1], zip(predicted.values(), expected.values()))) / float(len(predicted.values()))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 114,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def baseline(target_instance):\n",
-    "    return wn.synsets(target_instance.lemma)[0]\n",
-    "\n",
-    "predicted_baseline = { k: baseline(wsd) for k, wsd in dev_instances.items() }"
+    "# Part 1: Baseline and Lesk's Algorithm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.061855670103092786"
+       "0.038620689655172416"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy_of(predicted_baseline, expected_dev)"
+    "def predict_with(method, instance_dict):\n",
+    "    return { k: method(wsd) for k, wsd in instance_dict.items() }\n",
+    "    \n",
+    "def baseline(target_instance):\n",
+    "    return wn.synsets(target_instance.lemma)[0]\n",
+    "\n",
+    "predicted_baseline = predict_with(baseline, test_instances)\n",
+    "\n",
+    "accuracy_of(predicted_baseline, expected_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'WordNetCorpusReader' object has no attribute 'Synset'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-85-4f53b55af495>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSynset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'WordNetCorpusReader' object has no attribute 'Synset'"
-     ]
+     "data": {
+      "text/plain": [
+       "0.022758620689655173"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "predicted_lesk = { k: nltk.wsd.lesk(wsd.context, wsd.lemma) for k, wsd in test_instances.items() }\n",
+    "\n",
+    "accuracy_of(predicted_lesk, expected_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2: Combination of Word Sense Frequency & Lesk's Algorithm"
+   ]
   },
   {
    "cell_type": "code",
