--- a/Comparing baseline with naïve Lesk's Algorithm.ipynb
+++ b/Comparing baseline with naïve Lesk's Algorithm.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,13 @@
     "\n",
     "from tqdm import tqdm # progress bar\n",
     "import functools # LRU cache\n",
-    "import string"
+    "import string # for punctuation\n",
+    "import numpy as np # linspace for hyperparameter optimization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,20 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('d012.s023.t008', [Synset('contribution.n.01')]),\n",
-       " ('d010.s020.t003', [Synset('event.n.01')]),\n",
-       " ('d006.s029.t001', [Synset('lawyer.n.01')]),\n",
-       " ('d008.s003.t006', [Synset('chemical_element.n.01')]),\n",
-       " ('d009.s009.t004', [Synset('democracy.n.02')])]"
+       "[('d009.s029.t002', [Synset('state.n.04')]),\n",
+       " ('d011.s019.t002', [Synset('spain.n.01')]),\n",
+       " ('d010.s022.t001', [Synset('wife.n.01')]),\n",
+       " ('d012.s015.t007', [Synset('pressure.n.02')]),\n",
+       " ('d012.s012.t002', [Synset('immigration.n.01')])]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +169,7 @@
        " '29': 0.0006868131868131869}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,20 +204,20 @@
     "    \n",
     "    res = {}\n",
     "    for key in predicted:\n",
-    "        lemma = test_instances[key].lemma\n",
-    "        context = \" \".join(test_instances[key].context)\n",
+    "        #lemma = test_instances[key].lemma\n",
+    "        #context = \" \".join(test_instances[key].context)\n",
     "        if predicted[key] in expected[key]:\n",
     "            res[key] = [\n",
     "                True, \n",
-    "                lemma, \n",
-    "                context, \n",
+    "                #lemma, \n",
+    "                #context, \n",
     "                \"Expected synset: \" + predicted[key].name(),\n",
     "                \"Expected definition: \" + predicted[key].definition()]\n",
     "        else:\n",
     "            res[key] = [\n",
     "                False, \n",
-    "                lemma,\n",
-    "                context,\n",
+    "                #lemma,\n",
+    "                #context,\n",
     "                \"Predicted synset: \" + predicted[key].name(), \n",
     "                \"Predicted definition: \" + predicted[key].definition(),\n",
     "                \"Expected synsets: \" + \",\".join([x.name() for x in expected[key]]),\n",
@@ -255,32 +256,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1450/1450 [00:00<00:00, 20011.45it/s]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "0.623448275862069"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def predict_with(method, instance_dict):\n",
-    "    return { k: method(wsd) for k, wsd in tqdm(instance_dict.items()) }\n",
+    "    return { k: method(wsd) for k, wsd in instance_dict.items() }\n",
     "    \n",
     "def baseline(target_wsdinstance):\n",
     "    return wn.synsets(target_wsdinstance.lemma)[0]\n",
@@ -292,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +295,7 @@
        "0.29586206896551726"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,23 +330,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "negotiation\n"
+      "d001.s004.t007\n",
+      "['see', 'important', 'advance', 'negotiation', 'run', 'time', '@card@', 'world', 'leader', 'arrive', 'Copenhagen', 'next', 'week']\n",
+      "week\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9961089494163424"
+       "0.9623056614843063"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,22 +365,33 @@
     "     \n",
     "## Debug ##\n",
     "wsd = list(dev_instances.values())[4]\n",
+    "print(wsd.id)\n",
+    "print(wsd.context)\n",
     "print(wsd.lemma)\n",
     "prior(wsd, wn.synsets(wsd.lemma)[0], 8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'consecutive', 'period', 'day', 'seven'}, {'work', 'day', 'week', 'calendar', 'hour'}, {'consecutive', 'Sunday', 'seven', 'period', 'starting', 'day'}]\n",
+      "{'leader', 'run', 'time', 'week', 'world', 'see', 'negotiation', 'Copenhagen', 'next', 'important', '@card@', 'arrive', 'advance'}\n",
+      "[0, 1, 0]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.5"
+       "0.0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,8 +401,11 @@
     "def lesks(wsdinstance, target_synset, power=1):\n",
     "    target_index = wn.synsets(wsdinstance.lemma).index(target_synset)\n",
     "    synsets = [set(lemmatize_sentence(synset.definition())) for synset in wn.synsets(wsdinstance.lemma)]\n",
+    "    print(synsets)\n",
     "    pattern = set(wsdinstance.context)\n",
+    "    print(pattern)\n",
     "    overlaps = [pow(len(pattern.intersection(synset)), power) for synset in synsets]\n",
+    "    print(overlaps)\n",
     "    \n",
     "    if sum(overlaps) == 0:\n",
     "        return 1 / float(len(wn.synsets(wsdinstance.lemma)))\n",
@@ -408,73 +418,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1450/1450 [00:41<00:00, 35.03it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def posterior_helper(wsdinstance, target_synset):\n",
-    "    return prior(wsdinstance, target_synset) * lesks(wsdinstance, target_synset)\n",
+    "def posterior_helper(wsdinstance, target_synset, prior, odds):\n",
+    "    return prior(wsdinstance, target_synset) * odds(wsdinstance, target_synset)\n",
     "\n",
-    "def posterior(wsdinstance, target_synset):\n",
-    "    new_evidences = [posterior_helper(wsdinstance, synset) for synset in wn.synsets(wsdinstance.lemma)]\n",
+    "def posterior(wsdinstance, target_synset, prior, odds):\n",
+    "    new_evidences = [posterior_helper(wsdinstance, synset, prior, odds) for synset in wn.synsets(wsdinstance.lemma)]\n",
     "    \n",
-    "    return posterior_helper(wsdinstance, target_synset) / float(sum(new_evidences))\n",
+    "    return posterior_helper(wsdinstance, target_synset, prior, odds) / float(sum(new_evidences))\n",
     "\n",
-    "def bayesian(wsdinstance):\n",
-    "    probabilities = [posterior(wsdinstance, synset) for synset in wn.synsets(wsdinstance.lemma)]\n",
+    "def bayesian(wsdinstance, prior=prior, odds=lesks):\n",
+    "    probabilities = [posterior(wsdinstance, synset, prior, odds) for synset in wn.synsets(wsdinstance.lemma)]\n",
     "    return wn.synsets(wsdinstance.lemma)[probabilities.index(max(probabilities))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1450/1450 [00:28<00:00, 50.04it/s]\n"
+      "Trying pp 1.0, op 1.0\n",
+      "Trying pp 1.0, op 4.0\n",
+      "Trying pp 1.7777777777777777, op 1.0\n",
+      "Trying pp 1.7777777777777777, op 4.0\n",
+      "Trying pp 2.5555555555555554, op 1.0\n",
+      "Trying pp 2.5555555555555554, op 4.0\n",
+      "Trying pp 3.3333333333333335, op 1.0\n",
+      "Trying pp 3.3333333333333335, op 4.0\n",
+      "Trying pp 4.111111111111111, op 1.0\n",
+      "Trying pp 4.111111111111111, op 4.0\n",
+      "Trying pp 4.888888888888889, op 1.0\n",
+      "Trying pp 4.888888888888889, op 4.0\n",
+      "Trying pp 5.666666666666667, op 1.0\n",
+      "Trying pp 5.666666666666667, op 4.0\n",
+      "Trying pp 6.444444444444445, op 1.0\n",
+      "Trying pp 6.444444444444445, op 4.0\n",
+      "Trying pp 7.222222222222222, op 1.0\n",
+      "Trying pp 7.222222222222222, op 4.0\n",
+      "Trying pp 8.0, op 1.0\n",
+      "Trying pp 8.0, op 4.0\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "prior_powers = np.linspace(1,8,10)\n",
+    "odds_powers = np.linspace(1,4,2)\n",
+    "\n",
+    "results = {}\n",
+    "\n",
+    "for pp in prior_powers:\n",
+    "    prior = functools.partial(prior, power=pp)\n",
+    "    for op in odds_powers:\n",
+    "        lesks = functools.partial(lesks, power=op)\n",
+    "        print(\"Trying pp {}, op {}\".format(pp, op))\n",
+    "        #predicted_bayesian_dev = predict_with(functools.partial(bayesian, prior=prior, odds=lesks), dev_instances)\n",
+    "        #accuracy = accuracy_of(predicted_bayesian_dev, expected_dev)\n",
+    "        #print(\"Achieved accuracy \" + str(accuracy))\n",
+    "        #results[\"-\".join([\"pp\" + str(pp), \"op\" + str(op)])] = accuracy\n",
+    "#predicted_bayesian_test = predict_with(bayesian, test_instances)\n",
+    "\n",
+    "#accuracy_of(predicted_bayesian_test, expected_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.48413793103448277"
+       "0.5917241379310345"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predicted_bayesian_test = predict_with(bayesian, test_instances)\n",
+    "def context_given_wordsense(wsdinstance, target_synset, power=1):\n",
+    "    context_synsets = [wn.synsets(w)[0] for w in wsdinstance.context if len(wn.synsets(w)) > 0]\n",
+    "    total = 0\n",
+    "    for synset in context_synsets:\n",
+    "        similarity = target_synset.path_similarity(synset) or 0\n",
+    "        if similarity == 0:\n",
+    "            continue\n",
+    "        total += pow(1 / similarity, power)\n",
+    "    return total\n",
     "\n",
+    "    #similarity = sum(pow(1 / target_synset.path_similarity(synset), power) or 0 for synset in context_synsets) / len(context_synsets)\n",
+    "    #return similarity\n",
+    "\n",
+    "prior = functools.partial(prior, power=6)\n",
+    "odds = functools.partial(context_given_wordsense, power=4)\n",
+    "predicted_bayesian_test = predict_with(functools.partial(bayesian, prior=prior, odds=odds), test_instances)\n",
     "accuracy_of(predicted_bayesian_test, expected_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
